apps/auth/authentik/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
    name: authentik
    labels:
      pod-security.kubernetes.io/enforce: privileged
