apps/auth/authentik/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authentik-cloudflare
  namespace: authentik
spec:
  ingressClassName: cloudflare
  rules:
    - host: sso.${DOMAIN_0}
      http:
        paths:
          - backend:
              service:
                name: authentik-http
                port:
                  number: 10230
            path: /
            pathType: Prefix
